--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/macOS/Fat Cat Lullaby.zip"
+export_path="../../Desktop/Lullaby_mac.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Window/Fat Cat Lullaby.exe"
+export_path="../../Desktop/Lullaby_windows.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -173,7 +173,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Linux/Fat Cat Lullaby.x86_64"
+export_path="../../Desktop/Lullaby_linux.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -213,7 +213,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Web/Fat Cat Lullaby.html"
+export_path="../../Desktop/web/Lullaby.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
